--- a/Adivinhe o Numero/index.html
+++ b/Adivinhe o Numero/index.html
@@ -14,9 +14,10 @@
 
     <script>
 
-        var segredo =5;
+        var segredo = Math.round(Math.random() * 10);
 
         var input = document.querySelector ("input");
+        input.focus();
 
         function verifica() {
 
@@ -25,6 +26,9 @@
             } else {
                 alert("Você ERROU!!!!");
             }
+            
+            input.value = " ";
+            input.focus ();
         }
 
         var button = document.querySelector("button");
